2009-06-30  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclInt.h:		add assert macros for clang static
	* generic/tclPanic.c:		analyzer and redefine Tcl_Panic to
	* generic/tclStubInit.c:	assert after panic in clang PURIFY
					builds.

	* generic/tclCmdIL.c:		add clang assert for false positive
					from static analyzer.

2009-06-26  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Tcl-Common.xcconfig:	update projects for Xcode 3.1 and 3.2,
	* macosx/Tcl.xcode/*:		standardize on gcc 4.2, remove obsolete
	* macosx/Tcl.xcodeproj/*:	configurations and pre-Xcode project.
	* macosx/Tcl.pbproj/* (removed):

	* macosx/README:		update project docs, cleanup.

	* unix/Makefile.in:		update dist target for project changes.

2009-06-24  Donal K. Fellows  <dkf@users.sf.net>

	* tests/oo.test (oo-19.1): [Bug 2811598]: Make more resilient.

2009-06-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/http11.test: [Bug 2811492]: Clean up procs after testing.

2009-06-18  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCkalloc.c (MemoryCmd): [Bug 988703]:
	* generic/tclObj.c (ObjData, TclFinalizeThreadObjects): Add
	mechanism for discovering what Tcl_Objs are allocated when built
	for memory debugging. Developed by Joe Mistachkin.

2009-06-17 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclEvent.c: Applied a patch by George Peter Staplin
	drastically reducing the ambition of [exit] wrt finalization, and
	thus solving many multi-thread teardown issues. [Bugs 2001201,
	486399, and possibly 597575, 990457, 1437595, 2750491]

2009-06-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c: sprintf() -> Tcl_ObjPrintf() conversion.

2009-06-15  Reinhard Max  <max@suse.de>

	* unix/tclUnixPort.h: Move all socket-related code from tclUnixChan.c
	* unix/tclUnixChan.c: to tclUnixSock.c.
	* unix/tclUnixSock.c:

2009-06-15  Donal K. Fellows  <dkf@users.sf.net>

	* tools/tcltk-man2html.tcl (make-man-pages): [Patch 557486]: Apply